--- a/Reranking(Cross_encoder).ipynb
+++ b/Reranking(Cross_encoder).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9fMJJlOAYygCD10FrPc4J"
+      "authorship_tag": "ABX9TyND/5aSV5Ud9cUn4kqhJ445"
     },
     "kernelspec": {
       "name": "python3",
@@ -392,13 +392,40 @@
       "cell_type": "code",
       "source": [
         "splitter=RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=150)\n",
-        "docs=splitter.split_documents(docs)"
+        "docs=splitter.split_documents(docs)\n"
       ],
       "metadata": {
         "id": "cky0b2AyZGJ8"
       },
       "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "docs[:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r-yU0TLeeC11",
+        "outputId": "e11c5525-1378-48cb-ed78-207a752b8916"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Document(metadata={'source': 'mynta_faq.txt'}, page_content='Why are there different prices for the same product? Is it legal?\\nMyntra is an online marketplace platform that enables independent sellers to sell their products to buyers. The prices are solely decided by the sellers, and Myntra does not interfere in the same. There could be a possibility that the same product is sold by different sellers at different prices. Myntra rightfully fulfils all legal compliances of onboarding multiple sellers on its forum as it is a marketplace platform.'),\n",
+              " Document(metadata={'source': 'mynta_faq.txt'}, page_content=\"How can I contact any seller?\\nMyntra.com is a marketplace on which third-party sellers sell products to customers. To contact a seller or raise any grievance against them, please send a letter with the below address on the envelope and include product page URL so that it can be forwarded to the seller.\\n\\n\\nTo,\\n\\n\\n'Include Seller's name'\\n\\n\\nSeller Mailbox: Contact Seller\\n\\n\\nC/O Myntra Designs Private Limited\\n\\n\\nBuildings Alyssa, Begonia and Clover situated in Embassy Tech Village,\")]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -427,9 +454,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#embedings\n",
+        "embeddings = GoogleGenerativeAIEmbeddings(\n",
+        "    model=\"models/text-embedding-004\",\n",
+        "    task_type=\"retrieval_document\",\n",
+        "    output_dimensionality=512\n",
+        ")\n",
+        "\n"
+      ],
       "metadata": {
         "id": "3Av4Q3ycY_9H"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "db=FAISS.from_documents(docs,embeddings)"
+      ],
+      "metadata": {
+        "id": "pyd7LIyQcVdO"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(db.docstore._dict.values())[:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IDCl9ETVdNQk",
+        "outputId": "4241bd5f-fd21-4911-ff7a-2cb8ea7af66c"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Document(id='00b8fa48-bb5e-4a5d-9fe4-cd725a31898c', metadata={'source': 'mynta_faq.txt'}, page_content='Why are there different prices for the same product? Is it legal?\\nMyntra is an online marketplace platform that enables independent sellers to sell their products to buyers. The prices are solely decided by the sellers, and Myntra does not interfere in the same. There could be a possibility that the same product is sold by different sellers at different prices. Myntra rightfully fulfils all legal compliances of onboarding multiple sellers on its forum as it is a marketplace platform.'),\n",
+              " Document(id='be544d10-3e42-4ec5-a2ee-98d34b970c5e', metadata={'source': 'mynta_faq.txt'}, page_content=\"How can I contact any seller?\\nMyntra.com is a marketplace on which third-party sellers sell products to customers. To contact a seller or raise any grievance against them, please send a letter with the below address on the envelope and include product page URL so that it can be forwarded to the seller.\\n\\n\\nTo,\\n\\n\\n'Include Seller's name'\\n\\n\\nSeller Mailbox: Contact Seller\\n\\n\\nC/O Myntra Designs Private Limited\\n\\n\\nBuildings Alyssa, Begonia and Clover situated in Embassy Tech Village,\")]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "retriver=db."
+      ],
+      "metadata": {
+        "id": "afHo_uNMdaSb"
       },
       "execution_count": null,
       "outputs": []
